# honeypot

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  config.example.toml
.github/workflows/: ci-release.yml
docs/: prd.md  requirements.md
packaging/: config.toml  honeypot.service
scripts/: install-service.sh
src/: admin.rs  allowlist.rs  ban.rs  config.rs  firewall.rs  honeypot.rs  inline_admin.rs  lib.rs  logging.rs  main.rs  store.rs  tracker.rs  webdav.rs
